k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
